--- a/src/Components/AppointmentScheduler/AppointmentScheduler.css
+++ b/src/Components/AppointmentScheduler/AppointmentScheduler.css
@@ -29,7 +29,7 @@
 }
 
 .note-input {
-  height: 100px;
+  height: 60px;
 }
 
 .name-input {
@@ -53,8 +53,8 @@
   font-weight: bold;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   transition: all 0.3s ease;
-
   cursor: pointer;
+  margin-top: -30px;
 }
 
 .btn:hover {
