--- a/src/Components/ServiceCard/ServiceCard.css
+++ b/src/Components/ServiceCard/ServiceCard.css
@@ -65,3 +65,28 @@
 .service-item:first-child h3 {
   margin-left: 40px;
 }
+
+@media screen and (min-width: 1920px) {
+  .services-container {
+    background-image: url("../../../public/Image/chair-barbershop.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    margin-top: -5px;
+  }
+  .service-item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .hair-cut {
+    margin-right: 44px;
+  }
+  .icono {
+    width: 150px;
+  }
+  .icono i {
+    font-size: 60px;
+  }
+}
