--- a/src/Components/ServiceCard/ServiceCard.css
+++ b/src/Components/ServiceCard/ServiceCard.css
@@ -69,9 +69,9 @@
 @media screen and (min-width: 1920px) {
   .services-container {
     background-image: url("../../../public/Image/chair-barbershop.jpg");
-    background-size: cover;
+    background-size: contain;
     background-position: center;
-    background-repeat: no-repeat;
+    background-repeat: repeat;
     background-attachment: fixed;
     margin-top: -5px;
   }
